--- a/.github/workflows/.main.yml
+++ b/.github/workflows/.main.yml
@@ -10,7 +10,8 @@ jobs:
     steps:
 
       #checkout your github code using actions/checkout@v2.3.3
-      - uses: actions/checkout@v2.3.3
+      - name: Checkout code
+        uses: actions/checkout@v2.3.3
 
       #do the same with another action (actions/setup-java@v2) that enable to setup jdk 11
       - name: Set up JDK 11
@@ -22,3 +23,36 @@ jobs:
       #finally build your app with the latest command
       - name: Build and test with Maven
         run: mvn clean verify -DskipTests --file ./java/simple-api-main/simple-api
+        # define job to build and publish docker image
+    build-and-push-docker-image:
+      needs: test-backend
+      # run only when code is compiling and tests are passing
+      runs-on: ubuntu-latest
+      # steps to perform in job
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v2
+        
+        - name: Build image and push backend
+          uses: docker/build-push-action@v2
+          with:
+            # relative path to the place where source code with Dockerfile is located
+            context: ./java/simple-api-main/simple-api
+            # Note: tags has to be all lower-case
+            tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-cpe:simple-api
+        
+        - name: Build image and push database
+          uses: docker/build-push-action@v2
+          with:
+            # relative path to the place where source code with Dockerfile is located
+            context: ./postgres
+            # Note: tags has to be all lower-case
+            tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-cpe:database
+        
+        - name: Build image and push httpd
+          uses: docker/build-push-action@v2
+          with:
+            # relative path to the place where source code with Dockerfile is located
+            context: ./apache
+            # Note: tags has to be all lower-case
+            tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-cpe:httpd
