--- a/.github/workflows/.main.yml
+++ b/.github/workflows/.main.yml
@@ -32,6 +32,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Login to DockerHub
+        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{secrets.DOCKERHUB_TOKEN }}
       
       - name: Build image and push backend
         uses: docker/build-push-action@v2
@@ -40,6 +43,7 @@ jobs:
           context: ./java/simple-api-main/simple-api
           # Note: tags has to be all lower-case
           tags: ${{secrets.DOCKERHUB_USERNAME}}/backendapi-image:1.0
+          push: ${{ github.ref == 'refs/heads/main }}
       
       - name: Build image and push database
         uses: docker/build-push-action@v2
@@ -48,6 +52,7 @@ jobs:
           context: ./postgres
           # Note: tags has to be all lower-case
           tags: ${{secrets.DOCKERHUB_USERNAME}}/postgres-image:1.0
+          push: ${{ github.ref == 'refs/heads/main }}
       
       - name: Build image and push httpd
         uses: docker/build-push-action@v2
@@ -56,3 +61,4 @@ jobs:
           context: ./apache
           # Note: tags has to be all lower-case
           tags: ${{secrets.DOCKERHUB_USERNAME}}/apache-image:1.0
+          push: ${{ github.ref == 'refs/heads/main }}
