--- a/.github/workflows/.main.yml
+++ b/.github/workflows/.main.yml
@@ -43,7 +43,7 @@ jobs:
           context: ./java/simple-api-main/simple-api
           # Note: tags has to be all lower-case
           tags: ${{secrets.DOCKERHUB_USERNAME}}/backendapi-image:1.0
-          push: ${{ github.ref == 'refs/heads/main }}
+          push: ${{ github.ref == 'refs/heads/main' }}
       
       - name: Build image and push database
         uses: docker/build-push-action@v2
@@ -52,7 +52,7 @@ jobs:
           context: ./postgres
           # Note: tags has to be all lower-case
           tags: ${{secrets.DOCKERHUB_USERNAME}}/postgres-image:1.0
-          push: ${{ github.ref == 'refs/heads/main }}
+          push: ${{ github.ref == 'refs/heads/main' }}
       
       - name: Build image and push httpd
         uses: docker/build-push-action@v2
@@ -61,4 +61,4 @@ jobs:
           context: ./apache
           # Note: tags has to be all lower-case
           tags: ${{secrets.DOCKERHUB_USERNAME}}/apache-image:1.0
-          push: ${{ github.ref == 'refs/heads/main }}
+          push: ${{ github.ref == 'refs/heads/main' }}
