add env variable in yml

--- a/.github/workflows/.main.yml
+++ b/.github/workflows/.main.yml
@@ -26,7 +26,8 @@ jobs:
       
       - name: Check quality
         run:  mvn -B verify sonar:sonar -Dsonar.projectKey=FlorentMonnet_DevOps -Dsonar.organization=florentmonnet -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{secrets.SONAR_TOKEN }}  --file ./java/simple-api-main/simple-api/pom.xml
-
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   build-and-push-docker-image:
     needs: test-backend
     # run only when code is compiling and tests are passing
