--- a/.github/workflows/.main.yml
+++ b/.github/workflows/.main.yml
@@ -7,8 +7,10 @@ on:
 jobs:
   test-backend:
     runs-on: ubuntu-18.04
-    env:
-      working-directory: ./java/simple-api-main/simple-api
+    only:
+      changes:
+        - ./java/simple-api-main/simple-api
+
     steps:
 
       #checkout your github code using actions/checkout@v2.3.3
