--- a/.github/workflows/.main.yml
+++ b/.github/workflows/.main.yml
@@ -20,8 +20,16 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
 
+      - name: Cache local Maven repository
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+            
       #finally build your app with the latest command
-      - name: Build and test with Maven
+      - name: Build and test with Maven 
         run: mvn clean verify --file ./java/simple-api-main/simple-api
       
       - name: Check quality
