--- a/.github/workflows/.main.yml
+++ b/.github/workflows/.main.yml
@@ -17,16 +17,9 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
+          cache: 'maven'
           java-version: '11'
           distribution: 'adopt'
-
-      - name: Cache local Maven repository
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
             
       #finally build your app with the latest command
       - name: Build and test with Maven 
