--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -540,8 +540,10 @@ Include conf/extra/proxy-html.conf
 ServerName localhost
 <VirtualHost *:80>
 ProxyPreserveHost On
-ProxyPass /api http://java-api:8080/
-ProxyPassReverse /api http://java-api:8080/
+    ProxyPass /api http://java-api:8080/
+    ProxyPassReverse /api http://java-api:8080/
+    ProxyPass / http://front:8080/
+    ProxyPassReverse / http://front:8080/
 </VirtualHost>
 
 # Secure (SSL/TLS) connections
