--- a/.github/workflows/.main.yml
+++ b/.github/workflows/.main.yml
@@ -80,7 +80,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           # relative path to the place where source code with Dockerfile is located
-          context: ./front
+          context: ./devops-front-main
           # Note: tags has to be all lower-case
           tags: ${{secrets.DOCKERHUB_USERNAME}}/front-image:1.0
           push: ${{ github.ref == 'refs/heads/main' }}
