--- a/.github/workflows/.build_and_push_apache_and_database.yml
+++ b/.github/workflows/.build_and_push_apache_and_database.yml
@@ -1,4 +1,4 @@
-name: Build and push database
+name: Build and push apache and database
 on:
   workflow_run:
     workflows: ["Test backend"]
@@ -26,7 +26,7 @@ jobs:
           # Note: tags has to be all lower-case
           tags: ${{secrets.DOCKERHUB_USERNAME}}/postgres-image:1.1
           push: ${{ github.ref == 'refs/heads/main' }}
-          
+
       - name: Build image and push httpd
         uses: docker/build-push-action@v2
         with:
