--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,7 +1,10 @@
+#lance le playbook pour tous les hosts(centos@florent.monnet.takima.cloud)
 - hosts: all
   gather_facts: false
+  #lance en super user
   become: yes
   roles:
+  #lance chaque role pour installer docker, créer le réseau, lancer les containers docker
     - install-docker
     - create-network
     - launch-database
