--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -31,4 +31,4 @@ jobs:
           chmod 600 ./.ssh/id_rsa
       - name: run exporters playbook
         run: |
-          ansible-playbook -i ./TP3/inventories/setup.yaml ./TP3/playbook.yaml
+          ansible-playbook -i ./TP3/inventories/setup.yaml ./ansible/playbook.yaml
