--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -27,9 +27,9 @@ jobs:
           SERVER_SSH_KEY: ${{ secrets.SERVER_RSA }}
         run: |
           mkdir ./.ssh
-          echo "$SERVER_SSH_KEY" > ./.ssh/id_rsa
-          chmod 600 ./.ssh/id_rsa
-          pwd
+          echo "$SERVER_SSH_KEY" > ../.ssh/id_rsa
+          chmod 600 ../.ssh/id_rsa
+          ls
       - name: run exporters playbook
         run: |
           ansible-playbook -i ./TP3/inventories/setup.yaml ./ansible/playbook.yaml
