--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -26,7 +26,7 @@ jobs:
         env:
           SERVER_SSH_KEY: ${{ secrets.SERVER_RSA }}
         run: |
-          mkdir ./.ssh
+          mkdir ../.ssh
           echo "$SERVER_SSH_KEY" > ../.ssh/id_rsa
           chmod 600 ../.ssh/id_rsa
           ls
