--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -29,6 +29,7 @@ jobs:
           mkdir ./ansible/.ssh
           echo "$SERVER_SSH_KEY" > ./ansible/.ssh/id_rsa
           chmod 600 ./ansible/.ssh/id_rsa
+          ls ansible
           
       - name: run exporters playbook
         run: |
