--- a/ansible/inventories/setup.yml
+++ b/ansible/inventories/setup.yml
@@ -3,7 +3,7 @@ all:
     #on configure notre user
     ansible_user: centos
     #on configure notre chemin vers notre clef privé ssh
-    ansible_ssh_private_key_file: ./.ssh/id_rsa
+    ansible_ssh_private_key_file: .ssh/id_rsa
   children:
     prod:
       hosts: 
