--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Run playbook
         uses: dawidd6/action-ansible-playbook@v2
         with:
-          playbook: ./ansible/playbook.yaml
+          playbook: ./ansible/playbook.yml
           key: ${{secrets.SERVER_RSA}}
           inventory: |
             all:
