--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -1,23 +1,15 @@
-# name: Deploy application
-# on:
-#   workflow_run:
-#     workflows: ["Build & Push Backend"]
-#     types:
-#       - completed
-#     branches: ['main']
-#   pull_request:
-
 name: Deploy application
 on:
-  push:
+  workflow_run:
+    workflows: ["Build and push backend"]
+    types:
+      - completed
     branches: ['production']
   pull_request:
-
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    #if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
