--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -1,31 +1,24 @@
-# name: Deploy application
-# on:
-#   workflow_run:
-#     workflows: ["Build & Push Backend"]
-#     types:
-#       - completed
-#     branches: ['main']
-#   pull_request:
 
 name: Deploy application
 on:
-  push:
+  workflow_run:
+    workflows: ["Build and push backend"]
+    types:
+      - completed
     branches: ['production']
   pull_request:
-
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    #if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
+          
       - name: Run playbook
         uses: dawidd6/action-ansible-playbook@v2
         with:
-          playbook: ./ansible/playbook.yaml
+          playbook: ./ansible/playbook.yml
           key: ${{secrets.SERVER_RSA}}
           inventory: |
             all:
