--- a/ansible/roles/launch-app/tasks/main.yml
+++ b/ansible/roles/launch-app/tasks/main.yml
@@ -2,7 +2,11 @@
 # tasks file for roles/launch-app
 - name: launch app container
   docker_container:
-    name: java-api
+    name: java-api-1
+    image: florentmonnet2/backendapi-image:1.1
+    networks: 
+      - name: app-network
+    name: java-api-2
     image: florentmonnet2/backendapi-image:1.1
     networks: 
       - name: app-network
