--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -538,13 +538,13 @@ Include conf/extra/proxy-html.conf
 </IfModule>
 
 ServerName localhost
-<Proxy "balancer://mycluster">
-    BalancerMember "http://java-api-1:8080"
-    BalancerMember "http://java-api-2:8080"
-</Proxy>
+# <Proxy "balancer://mycluster">
+#     BalancerMember "http://java-api-1:8080"
+#     BalancerMember "http://java-api-2:8080"
+# </Proxy>
 <VirtualHost *:80>
 ProxyPreserveHost On
-    ProxyPass /api balancer://mycluster
+    ProxyPass /api http://java-api:8080
     ProxyPassReverse /api balancer://mycluster
     ProxyPass / http://front:80/
     ProxyPassReverse / http://front:80/
