--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,9 @@
 version: '3.3'
 services:
-  java-api-1:
+  java-api:
   # creation d'un container que l'on nomme java-api à partir du Dockerfile dans ./java/simple-api-main/simple-api
     container_name:
-      "java-api-1"
-    build:
-      ./java/simple-api-main/simple-api
-    networks:
-      - "app-network"
-    depends_on:
-      - "postgres-app"
-  
-  java-api-2:
-  # creation d'un container que l'on nomme java-api à partir du Dockerfile dans ./java/simple-api-main/simple-api
-    container_name:
-      "java-api-2"
+      "java-api"
     build:
       ./java/simple-api-main/simple-api
     networks:
@@ -41,8 +30,7 @@ services:
     networks:
       - "app-network"
     depends_on:
-      - "java-api-1"
-      - "java-api-2"
+      - "java-api"
   
   apache:
   # creation d'un container apache à partir du Dockerfile dans ./apache, on mappe les ports 80:80 pour pouvoir y accèder depuis notre host
@@ -55,8 +43,7 @@ services:
     networks:
       - "app-network"
     depends_on:
-      - "java-api-1"
-      - "java-api-2"
+      - "java-api"
       - "front"
 
 #creation du network pour la communication entre les 3 applis
