--- a/.github/workflows/.build_and_push_apache_and_database.yml
+++ b/.github/workflows/.build_and_push_apache_and_database.yml
@@ -4,7 +4,7 @@ on:
     workflows: ["Test backend"]
     types:
       - completed
-    branches: ['main']
+    branches: ['main', 'develop', 'production']
   pull_request:
 jobs:
   build-and-push-backend:
