--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -1,6 +1,9 @@
 name: Deploy application
 on:
-  push:
+  workflow_run:
+    workflows: ["Build and push backend"]
+    types:
+      - completed
     branches: ['production']
   pull_request:
 
