--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -6,6 +6,7 @@
   roles:
   #lance chaque role pour installer docker, créer le réseau, lancer les containers docker
     - install-docker
+    - remove-containers
     - create-network
     - launch-database
     - launch-app
