add production to workflow

--- a/.github/workflows/.test_backend.yml
+++ b/.github/workflows/.test_backend.yml
@@ -2,7 +2,7 @@ name: Test backend
 on:
   #to begin you want to launch this job in main and develop
   push:
-    branches: ['main', 'develop']
+    branches: ['main', 'develop','production']
   pull_request:
 jobs:
   test-backend:
